# tdr-convert

./: CHANGES.rst  NOTICE  README.rst  requirements.txt  setup.cfg  setup.py
tdrconvert/: all_info.py  load_devsim.py  read_tdr.py  tdr_convert.py  write_exodus.py  write_gmsh.py  write_tetgen.py
