[metadata]
version = 0.1.6
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python :: 3
        Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
name = tdr-convert
url = https://github.com/devsim/tdr-convert
author = Juan Sanchez
author_email = info@devsim.com
description = tdr-convert: tdr file converter
license = Apache License
long_description = file: README.rst
long_description_content_type = text/x-rst
project_urls =
    Bug Tracker = https://github.com/devsim/tdr-convert/issues
    Source Code = https://github.com/devsim/tdr-convert
